# zed-sdk

./: CMakeLists.txt  README.md
body tracking/body tracking/cpp/: README.md
body tracking/body tracking/cpp/src/: main.cpp
body tracking/multi-camera/cpp/: README.md  calib_00.json  calib_01.json  calib_02.json  zed_bodyfusion.ini
body tracking/multi-camera/cpp/include/: AppConfig.hpp  ClientPublisher.hpp  OscSender.hpp
body tracking/multi-camera/cpp/src/: AppConfig.cpp  ClientPublisher.cpp  OscSender.cpp  main.cpp
camera streaming/multi_sender/python/: streaming_senders.py
depth sensing/automatic region of interest/python/: automatic_region_of_interest.py
depth sensing/depth sensing/cpp/src/: main.cpp
global localization/live/python/: live.py
global localization/playback/python/: gnss_replay.py  playback.py
global localization/recording/cpp/src/: main.cpp
global localization/recording/python/: recording.py
object detection/birds eye viewer/cpp/src/: main.cpp
object detection/birds eye viewer/python/: object_detection_birds_view.py
object detection/custom detector/cpp/tensorrt_yolov5-v6-v8_onnx/src/: main.cpp
object detection/custom detector/cpp/tensorrt_yolov5-v6-v8_onnx_async/src/: main.cpp
object detection/custom detector/cpp/tensorrt_yolov8_seg_onnx/src/: main.cpp
object detection/custom detector/python/onnx_yolo_internal/: custom_internal_detector.py
positional tracking/positional tracking/cpp/: README.md
positional tracking/positional tracking/cpp/include/: SLAMView.hpp
positional tracking/positional tracking/cpp/src/: main.cpp
positional tracking/positional tracking/cpp/src/view/: SLAMView.cpp
positional tracking/positional tracking/csharp/: MainWindow.cs
positional tracking/positional tracking/python/: README.md  positional_tracking.py
positional tracking/positional tracking/python/utilities/: utilities.py
recording/export/svo/python/: svo_export.py
recording/recording/external_data/csharp/: Program.cs
recording/recording/multi camera/python/: recording_multi.py
recording/recording/single camera/csharp/: Program.cs
sensors_api/managed/cpp/: CMakeLists.txt  README.md  sensors_config.json
sensors_api/managed/cpp/include/: GLViewer.hpp  RerunViewer.hpp
sensors_api/managed/cpp/src/: GLViewer.cpp  RerunViewer.cpp  main.cpp
sensors_api/managed/python/: README.md  sensors_api_sample.py
sensors_api/managed/python/ogl_viewer/: viewer.py
sensors_api/sensor_placer/cpp/: CMakeLists.txt  README.md
sensors_api/sensor_placer/cpp/src/: GlViewer.cpp  GlViewer.h  SensorWorker.cpp  SensorWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sensors_api/threaded/cpp/: CMakeLists.txt  README.md
sensors_api/threaded/cpp/include/: Asynchronizer.hpp  GLViewer.hpp  Viewer.hpp
sensors_api/threaded/cpp/src/: GLViewer.cpp  main.cpp
spatial mapping/spatial mapping/python/: spatial_mapping.py
tutorials/: CMakeLists.txt
tutorials/tutorial 1 - hello ZED/python/: hello_zed_gpu.py
tutorials/tutorial 12 - retrieve tensor/: README.md
tutorials/tutorial 12 - retrieve tensor/cpp/: CMakeLists.txt  README.md  main.cpp
tutorials/tutorial 4 - positional tracking/cpp/: main.cpp
tutorials/tutorial 9 - global localization/python/: geotracking.py
zed one/: CMakeLists.txt  README.md
zed one/custom_inference/cpp/: CMakeLists.txt  README.md
zed one/custom_inference/cpp/include/: cuda_utils.h  logging.h  utils.h  yolo.hpp
zed one/custom_inference/cpp/src/: main.cpp  yolo.cpp
zed one/live/: README.md
zed one/live/cpp/: CMakeLists.txt
zed one/live/cpp/src/: main.cpp
zed one/live/python/: live.py
zed one/streaming_receiver/: README.md
zed one/streaming_receiver/cpp/: CMakeLists.txt
zed one/streaming_receiver/cpp/include/: utils.hpp
zed one/streaming_receiver/cpp/src/: main.cpp
zed one/streaming_receiver/python/: streaming_receiver.py
zed one/streaming_sender/: README.md
zed one/streaming_sender/cpp/: CMakeLists.txt
zed one/streaming_sender/cpp/include/: utils.hpp
zed one/streaming_sender/cpp/src/: main.cpp
zed one/streaming_sender/python/: streaming_sender.py
zed one/svo_external_data/: README.md
zed one/svo_external_data/cpp/: CMakeLists.txt
zed one/svo_external_data/cpp/include/: utils.hpp
zed one/svo_external_data/cpp/src/: playback.cpp  recording.cpp
zed one/svo_playback/: README.md
zed one/svo_playback/cpp/: CMakeLists.txt
zed one/svo_playback/cpp/include/: utils.hpp
zed one/svo_playback/cpp/src/: main.cpp
zed one/svo_playback/python/: svo_playback.py
zed one/svo_recording/: README.md
zed one/svo_recording/cpp/: CMakeLists.txt
zed one/svo_recording/cpp/include/: utils.hpp
zed one/svo_recording/cpp/src/: main.cpp
zed one/svo_recording/python/: svo_recording.py
